<resources>
    <string name="action_websearch">Web search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_login">Login</string>
    <string name="menu_history">History</string>
    <string name="feedback">Feedback</string>
    <string name="menu_account">Account</string>
    <string name="menu_rate">Rate this app!</string>
    <string name="action_logout">Logout</string>
    <string name="successfully_logout">successfully logged out.</string>
    <string name="msg_not_logged_in">not logged in.</string>
    <string name="already_logged_in">You are already logged in!</string>
    <string name="do_you_want_logout">Do you want to logout?</string>
    <string name="do_u_want_to_login">Do you want to Log In / Sign Up?</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_not_available">GPS not available.</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="press_back_again">Press Back again to Exit.</string>
    <string name="need_internet_msg">This application needs access to the internet!</string>
    <string name="want_to_continue">Do you want to continue?</string>
    <string name="no_email_client_installed">There are no email clients installed.</string>
    <string name="unable_find_market_app">Unable to find market app</string>
    <string name="logged_in_as_guest">You are logged in as Guest</string>
    <string name="connected_to_googleApi">Connected to GoogleAPI</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_net_message">To use app you need to turn it on.</string>
    <string name="twitter_email_not_present">not present</string>
    <string name="dialog_close_message">Close message</string>
    <string name="dialog_see_details">See details</string>
    <string name="turn_on_wifi">Turn On Wifi</string>
    <string name="turn_on_data">Turn On Data</string>
    <string name="close">Close</string>
    <string name="guest">Guest</string>
    <string name="welcome">Welcome </string>
    <string name="cookies">Cookies</string>
    <string name="cookie_policy">We use device identifier to personalize content and ads to provide functions of social
        media and analyze traffic. Also share such identifiers and other information from your device with its partner
        social media, advertising partners and partners for analysis.
    </string>
    <string name="l_sess_image">Session image</string>
    <string name="l_distance">Distance:</string>
    <string name="l_duration">Duration:</string>
    <string name="l_max_speed">Max Speed:</string>
    <string name="l_average_speed">Avg. Speed:</string>
    <string name="l_by_user">By:</string>
    <string name="feedback_text">Your text here</string>
    <string name="send_feedback">Send Feedback:</string>
    <string name="start_point">Start point</string>
    <string name="end_point">End point</string>
    <string name="my_account">My Account</string>
    <string name="saving_session">Saving Session</string>
    <string name="about_application">About Application</string>
    <string name="help_page">Help</string>
    <string name="account_page_label">Account Info</string>
    <string name="leader_board_best_runners">Best runners</string>
    <string name="leader_board_best_bikers">Best bikers</string>
    <string name="leader_board_best_drivers">Best drivers</string>
    <string name="leader_board_my_best">My best results</string>
    <string name="account_name_label">Your name:</string>
    <string name="account_username_label">Username:</string>
    <string name="account_email_label">E-mail address:</string>
    <string name="account_verified_email">Verified e-mail:</string>
    <string name="account_created_at">Created at:</string>
    <string name="save_time">Time</string>
    <string name="save_distance">distance</string>
    <string name="save_duration">Duration</string>
    <string name="save_by">by</string>
    <string name="save_max_speed">max speed</string>
    <string name="save_created_at">created at</string>
    <string name="save_type_of_sport">type of sport</string>
    <string name="save_average_speed">average speed</string>
    <string name="save_notsave_btn">DON\'T SAVE</string>
    <string name="save_save_btn">SAVE</string>
    <string name="post_on_facebook">Post on Facebook</string>
    <string name="bikers_click">Bikers click here…</string>
    <string name="runners_click">Runners click here…</string>
    <string name="drivers_click">Drivers click here…</string>
    <string name="screen_shot_successfully_saved">Screen shot successfully saved!</string>
    <string name="this_time">"Time/km"</string>
    <string name="time_is_fastest">"is fastest than world record for"</string>
    <string name="like_on_facebook">Like on Facebook</string>
    <string name="world_map">World map</string>
    <string name="title_activity_maps">Map</string>
    <string name="how_to_start">How to start:</string>
    <string name="help_login_text">Click on Login on left side menu to signUp/login</string>
    <string name="help_login_image">help login image</string>
    <string name="help_start_image">help start image</string>
    <string name="help_main_text">Click on Start button to start your Activity</string>
    <string name="help_main_image">help main page image</string>
    <string name="help_save_text">Click on Save/Share to save your Activity details</string>
    <string name="help_save_image">help save page image</string>
    <string name="skip_how_start">Skip How to start</string>
    <string name="skip">Skip</string>
    <string name="tab_how_to_login">How to Login</string>
    <string name="tab_how_start_page">Start Page</string>
    <string name="tab_main_page">Main Page</string>
    <string name="tab_save_page">Save Page</string>
    <string name="do_you_like_sport_meter">Do you like Sport Meter?</string>
    <string name="like">Like</string>
    <string name="do_you_want_rate_now">Do you want to rate Sport Meter now?</string>
    <string name="my_activity_history">My Activity History</string>
    <string name="anonymous">Anonymous</string>
    <string name="remind_later">Remind me later</string>
    <string name="choose_type_of_sport">Choose type of sport</string>
    <string name="permission_granted">Permissions granted</string>
    <string name="enter_app">Enter application</string>
    <string name="show_best">Show best:</string>
    <string name="help_type_sport_text">Click the drop-down menu to select a sport</string>
    <string name="user_weight">Weight</string>
    <string name="user_height">Height</string>
    <string name="user_gender">Gender</string>
    <string name="user_units">Preferred unit</string>
    <string name="not_present">Not_set</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="centimeters">centimeters</string>
    <string name="kilograms">kilograms</string>
    <string name="choose">Choose sport</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="climbing">Climbing</string>
    <string name="walking">Walking</string>
    <string name="calories_message">Data needed for calculating calories</string>
    <string name="total_distance">"Total distance:"</string>
    <string name="msg_empty_list">No data!</string>
    <string name="session_saved">Session is saved</string>
    <string name="session_not_saved">Session is NOT saved</string>
    <string name="facebook_not_logged_in">You are not logged in with Facebook.</string>
    <string name="pref_header_general">General</string>
    <string name="preferred_unit">Preferred units</string>
    <string name="history_query_size">History Query size</string>
    <string name="update_map_interval">Update Google Map interval</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="app_name" translatable="false">Sport Meter</string>
    <string name="local_preferences" translatable="false">localPreferences</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4902558855752732/5202510405</string>
    <string name="banner_ad_unit_id_start" translatable="false">ca-app-pub-4902558855752732/2414249200</string>
    <string name="banner_ad_unit_id_help" translatable="false">ca-app-pub-4902558855752732/2804387209</string>
    <string name="banner_ad_unit_id_save" translatable="false">ca-app-pub-4902558855752732/4281120403</string>
    <string name="banner_ad_unit_id_account" translatable="false">ca-app-pub-4902558855752732/4593182802</string>
    <string name="banner_ad_unit_id_leaderboard" translatable="false">ca-app-pub-4902558855752732/6069916009</string>
    <string name="interestitial_add" translatable="false">ca-app-pub-4902558855752732/8831484401</string>
    <string name="interestitial_add_rewarded" translatable="false">ca-app-pub-4902558855752732/5757853609</string>
    <string name="session_object" translatable="false">Sessions</string>
    <string name="session_username" translatable="false">username</string>
    <string name="session_time_per_kilometer" translatable="false">timePerKilometer</string>
    <string name="session_name" translatable="false">name</string>
    <string name="session_max_speed" translatable="false">maxSpeed</string>
    <string name="session_average_speed" translatable="false">averageSpeed</string>
    <string name="session_distance" translatable="false">distance</string>
    <string name="session_duration" translatable="false">duration</string>
    <string name="session_sport_type" translatable="false">sportType</string>
    <string name="l_time_per_km" translatable="false">min/km:</string>
    <string name="huawei_device_id" translatable="false">CA0A55C98B89F9F9F4844683B21D024A</string>
    <string name="type_of_sport" translatable="false">sportType</string>
    <string name="is_first_run" translatable="false">isFirstRun</string>
    <string name="facebook_page" translatable="false">https://www.facebook.com/sportmeter/</string>
    <string name="app_email" translatable="false">runner.meter@gmail.com</string>
    <string name="change_type_of_sport" translatable="false">Change type</string>
    <string name="copyright" translatable="false">Copyright © 2015 by Angel Raev. All rights reserved.</string>
    <string name="interstitial_mopub_ad" translatable="false">d4f5d0fff25d4d199360647e3be73d7d</string>
</resources>