<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_height="match_parent"
      android:layout_width="wrap_content">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_map_fragment"
                android:icon="@drawable/ic_maps"
                android:title="Map"
                android:checked="true"/>
        <item
                android:id="@+id/nav_login_fragment"
                android:icon="@drawable/ic_login"
                android:title="@string/menu_login" />
        <item
                android:id="@+id/nav_feedback_fragment"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback" />
        <item
                android:id="@+id/nav_account_fragment"
                android:icon="@drawable/ic_account"
                android:title="@string/menu_account" />
        <item
                android:id="@+id/nav_leaderboard_fragment"
                android:icon="@drawable/ic_leaderboard"
                android:title="@string/menu_leaderboard" />
        <item
                android:id="@+id/rate_app_fragment"
                android:icon="@drawable/ic_rating"
                android:title="@string/menu_rate" />
    </group>
</menu>