<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/account_data_layout"
              android:visibility="gone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/calories_message"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="30dp"
              android:gravity="center"
              android:text="@string/user_gender"/>
    <Spinner
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:id="@+id/gender_type"
            android:spinnerMode="dialog"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="30dp"
              android:gravity="center"
              android:text="@string/user_height"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="30dp"
                  android:gravity="center"
                  android:orientation="horizontal">
        <EditText android:layout_width="100dp"
                  android:layout_height="40dp"
                  android:layout_gravity="center"
                  android:inputType="numberDecimal"
                  android:id="@+id/user_height"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="30dp"
                  android:gravity="center"
                  android:text="@string/centimeters"/>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
              android:layout_height="30dp"
              android:gravity="center"
              android:text="@string/user_weight"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="30dp"
                  android:gravity="center"
                  android:orientation="horizontal">
        <EditText android:layout_width="100dp"
                  android:layout_height="40dp"
                  android:layout_gravity="center"
                  android:inputType="numberDecimal"
                  android:id="@+id/user_weight"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="30dp"
                  android:gravity="center"
                  android:text="@string/kilograms"/>
    </LinearLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/save_account"
            android:text="@string/save_save_btn"/>

</LinearLayout>