<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:theme="@style/AppTheme">
    <!--<item android:id="@+id/action_settings"-->
    <!--android:title="@string/action_settings"-->
    <!--android:icon="@drawable/ic_settings"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="never"/>-->
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:icon="@drawable/ic_about"
          android:orderInCategory="200"
          app:showAsAction="never"/>
    <item android:id="@+id/action_help"
          android:title="@string/action_help"
          android:icon="@drawable/ic_help"
          android:orderInCategory="300"
          app:showAsAction="never"/>
    <item android:id="@+id/action_world_map"
          android:title="@string/world_map"
          android:icon="@drawable/ic_map"
          android:orderInCategory="400"
          app:showAsAction="never"/>
    <item android:id="@+id/action_legal_notice"
          android:title="@string/google_legal_notices"
          android:orderInCategory="500"
          app:showAsAction="never"/>
    <item android:id="@+id/action_list_lite_map"
          android:title="LiteMap"
          android:orderInCategory="600"
          app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:icon="@drawable/ic_logout"
          android:orderInCategory="700"
          app:showAsAction="never"/>
</menu>