<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:theme="@style/ThemeOverlay.AppCompat.Dark"
      android:background="?attr/colorPrimaryDark">
    <!--<item android:id="@+id/action_websearch"-->
    <!--android:icon="@drawable/action_search"-->
    <!--android:title="@string/action_websearch"-->
    <!--app:showAsAction="ifRoom|withText"/>-->
    <!--<item android:id="@+id/action_settings"-->
    <!--android:title="@string/action_settings"-->
    <!--android:icon="@drawable/ic_settings"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="never"/>-->
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:icon="@drawable/ic_about"
          android:orderInCategory="200"
          app:showAsAction="never"/>
    <item android:id="@+id/action_world_map"
          android:title="@string/world_map"
          android:icon="@drawable/ic_map"
          android:orderInCategory="300"
          app:showAsAction="never"/>
    <!--<item android:id="@+id/action_help"-->
    <!--android:title="@string/action_help"-->
    <!--android:icon="@drawable/ic_help"-->
    <!--android:orderInCategory="300"-->
    <!--app:showAsAction="never"/>-->
    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:icon="@drawable/ic_logout"
          android:orderInCategory="400"
          app:showAsAction="ifRoom"/>
</menu>