<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/account_layout"
              android:padding="10dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/account_page_label"
            android:id="@+id/page_label"
            android:layout_gravity="center_horizontal"/>
    <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"/>
    <ImageView android:layout_width="70dp"
               android:layout_height="70dp"
               android:visibility="gone"
               android:id="@+id/twitter_image_view"/>
    <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/account_name_label"
            android:layout_gravity="center"
            android:id="@+id/label_name"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/account_username_label"
            android:layout_gravity="center"
            android:id="@+id/label_username"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_username"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/account_email_label"
            android:layout_gravity="center"
            android:id="@+id/label_email"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_mail"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/account_verified_email"
            android:layout_gravity="center"
            android:id="@+id/label_verified"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:id="@+id/edit_is_verified"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/account_created_at"
            android:layout_gravity="center"
            android:id="@+id/textView5"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"/>
    <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/close_btn"
            android:layout_gravity="center"/>

    <!-- The advertise -->
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
        <include layout="@layout/ad_layout_account"/>
    </RelativeLayout>
</LinearLayout>