<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp"
              android:background="@color/app_color"
              tools:context="info.androidhive.materialtabs.fragments.OneFragment">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:textColor="@color/black"
              android:textStyle="bold"
              android:background="@color/app_color"
              android:text="@string/how_to_start"
              android:id="@+id/how4"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:textColor="@color/black"
              android:textStyle="bold"
              android:background="@color/app_color"
              android:text="@string/help_save_text"
              android:id="@+id/text4"/>
    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:contentDescription="@string/help_save_image"
               android:background="@color/app_color"
               android:src="@drawable/help_save"/>

</LinearLayout>