<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
            <!--android:key="example_switch"-->
            <!--android:title="@string/pref_title_social_recommendations"-->
            <!--android:summary="@string/pref_description_social_recommendations"-->
            <!--android:defaultValue="true"/>-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
            <!--android:key="example_text"-->
            <!--android:title="@string/pref_title_display_name"-->
            <!--android:defaultValue="@string/pref_default_display_name"-->
            <!--android:selectAllOnFocus="true"-->
            <!--android:inputType="textCapWords"-->
            <!--android:capitalize="words"-->
            <!--android:singleLine="true"-->
            <!--android:maxLines="1"/>-->

    <ListPreference
            android:key="map_interval"
            android:title="@string/update_map_interval"
            android:defaultValue="3000"
            android:entries="@array/update_map_interval"
            android:entryValues="@array/update_map_interval_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

    <ListPreference
            android:key="preferred_unit"
            android:title="@string/preferred_unit"
            android:defaultValue="0"
            android:entries="@array/preferred_unit"
            android:entryValues="@array/preferred_unit_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

    <ListPreference
            android:key="history_query_size"
            android:title="@string/history_query_size"
            android:defaultValue="15"
            android:entries="@array/history_query_size"
            android:entryValues="@array/history_query_size_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

</PreferenceScreen>
